processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__case_04_09.snap
---
source: processor/src/fast/tests/all_ops.rs
assertion_line: 133
expression: fast_stack_outputs
---
Err(
    OperationError {
        label: SourceSpan {
            source_id: SourceId(
                4294967295,
            ),
            start: ByteIndex(
                0,
            ),
            end: ByteIndex(
                0,
            ),
        },
        source_file: None,
        err: NotBinaryValue {
            context: Operation,
            value: 2,
        },
    },
)
